force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/Apttus_Billing__CustomNumberingEntry__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Instances of the custom Numbering settings for all the Object Types supported.</description>
    <label>Custom Numbering Entry</label>
</CustomObject>