force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__FieldFive__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldFive__c</fullName>
    <description>The fifth field.</description>
    <inlineHelpText>The fifth field.</inlineHelpText>
    <label>Field 5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>