force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__FieldFour__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldFour__c</fullName>
    <description>The fourth field.</description>
    <inlineHelpText>The fourth field.</inlineHelpText>
    <label>Field 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>