force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__FieldOne__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldOne__c</fullName>
    <description>First Field.</description>
    <inlineHelpText>First Field.</inlineHelpText>
    <label>Field 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>