force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__FieldThree__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldThree__c</fullName>
    <description>The third field.</description>
    <inlineHelpText>The third field.</inlineHelpText>
    <label>Field 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>