force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__FieldTwo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldTwo__c</fullName>
    <description>The second field.</description>
    <inlineHelpText>The second field.</inlineHelpText>
    <label>Field 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>