force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__FormatSeparator__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FormatSeparator__c</fullName>
    <description>Format Separator used in the custom number.</description>
    <inlineHelpText>Format Separator used in the custom number.</inlineHelpText>
    <label>Format Separator</label>
    <length>4</length>
    <type>Text</type>
</CustomField>