force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__NumberLength__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__NumberLength__c</fullName>
    <defaultValue>9</defaultValue>
    <description>The Length of the Custom Number.</description>
    <inlineHelpText>The Length of the Custom Number.</inlineHelpText>
    <label>Number Length</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>