force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ObjectType__c</fullName>
    <description>Invoice, Credit Memo, Refund, Payment</description>
    <inlineHelpText>Invoice, Credit Memo, Refund, Payment</inlineHelpText>
    <label>Object Type</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>