force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__Prefix__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Prefix__c</fullName>
    <description>Prefix to be used in the custom number.</description>
    <inlineHelpText>Prefix to be used in the custom number.</inlineHelpText>
    <label>Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>