force-app/main/default/objects/Apttus_Billing__CustomNumberingEntry__c/fields/Apttus_Billing__StartingNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__StartingNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Starting Number to be used in the Custom Numbering.</description>
    <inlineHelpText>Starting Number to be used in the Custom Numbering.</inlineHelpText>
    <label>Starting Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>